Updated builder pattern for Discount and DiscountLevel. (#89)
Only handle discount prices when value is changed.
Update price row with equivalent discount level when manual price is set.
Set correct approver when discount level is set to five or above even when manual price is set.