@@ -23,6 +23,7 @@ import java.util.Map;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
+import static org.json.XMLTokener.entity;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doReturn;
@@ -80,7 +81,7 @@ public class PriceRowServiceImplUnitTest {
                 .materialStandardPrice(oldMaterialPrice)
                 .build();
 
-        when(materialService.save(any())).thenAnswer(invocationOnMock -> (Material) invocationOnMock.getArguments()[0]);
+        when(materialService.save(any())).thenAnswer(invocationOnMock -> invocationOnMock.getArguments()[0]);
 
         EntityManager entityManager = mock(EntityManager.class);
         when(entityManager.getTransaction()).thenReturn(mock(EntityTransaction.class));
@@ -101,32 +102,20 @@ public class PriceRowServiceImplUnitTest {
         when(materialPriceService.findByMaterialNumber(anyString())).thenReturn(oldMaterialPrice);
 
         List<DiscountLevel> discountLevels = List.of(
-                DiscountLevel.builder()
-                        .level(1)
-                        .discount(0.0)
+                DiscountLevel.builder(0.0, 1)
                         .build(),
-                DiscountLevel.builder()
-                        .level(2)
-                        .discount(90.0)
+                DiscountLevel.builder(90.0, 2)
                         .build(),
-                DiscountLevel.builder()
-                        .level(3)
-                        .discount(180.0)
+                DiscountLevel.builder(180.0, 3)
                         .build(),
-                DiscountLevel.builder()
-                        .level(4)
-                        .discount(315.0)
+                DiscountLevel.builder(315.0, 4)
                         .build(),
-                DiscountLevel.builder()
-                        .level(5)
-                        .discount(468.0)
+                DiscountLevel.builder(468.0, 5)
                         .build()
         );
-        Discount discount = Discount.builder()
-                .materialNumber(materialNumber)
-                .discountLevels(discountLevels)
-                .build();
-        Map<String, Map<String, Map<String, Discount>>> discountMap = Map.of("100", Map.of("129", Map.of(materialNumber, discount)));
+
+        String salesOrg = "100";
+        String salesOffice = "129";
 
         MaterialPrice updatedMaterialPrice = MaterialPrice.builder()
                 .materialNumber(materialNumber)
@@ -149,7 +138,7 @@ public class PriceRowServiceImplUnitTest {
                 .discountLevel(3)
                 .build();
 
-        List<PriceRow> actual = service.saveAll(List.of(updatedPriceRow), "100", "129", "1",
+        List<PriceRow> actual = service.saveAll(List.of(updatedPriceRow), salesOrg, salesOffice, "1",
                 Map.of(updatedMaterialPrice.getMaterialNumber(), updatedMaterialPrice));
 
         PriceRow actualPriceRow = actual.get(0);
@@ -193,48 +182,42 @@ public class PriceRowServiceImplUnitTest {
                 .discountLevel(3)
                 .build();
 
-        when(repository.save(any())).thenReturn(priceRow);
+//        when(repository.save(any())).thenReturn(priceRow);
 
         when(materialPriceService.findByMaterialNumber(anyString())).thenReturn(materialPrice);
 
         List<DiscountLevel> discountLevels = List.of(
-                DiscountLevel.builder()
-                        .level(1)
-                        .discount(0.0)
+                DiscountLevel.builder(0.0, 1)
                         .zone(1)
                         .build(),
-                DiscountLevel.builder()
-                        .level(2)
-                        .discount(90.0)
+                DiscountLevel.builder(90.0, 2)
                         .zone(1)
                         .build(),
-                DiscountLevel.builder()
-                        .level(3)
-                        .discount(180.0)
+                DiscountLevel.builder(180.0, 3)
                         .zone(1)
                         .build(),
-                DiscountLevel.builder()
-                        .level(4)
-                        .discount(315.0)
+                DiscountLevel.builder(315.0, 4)
                         .zone(1)
                         .build(),
-                DiscountLevel.builder()
-                        .level(5)
-                        .discount(468.0)
+                DiscountLevel.builder(468.0, 5)
                         .zone(1)
                         .build()
         );
 
-        when(discountService.findDiscountLevelsBySalesOrgAndMaterialNumberAndDiscountLevel("100", "129", materialNumber, 3, 1)).thenReturn(Collections.singletonList(discountLevels.get(2)));
+        String salesOrg = "100";
+        String salesOffice = "129";
+        when(discountService.findDiscountLevelsBySalesOrgAndMaterialNumberAndDiscountLevel(salesOrg, salesOffice,
+                materialNumber, 3, 1)).thenReturn(Collections.singletonList(discountLevels.get(2)));
 
-        Discount discount = Discount.builder()
-                .materialNumber(materialNumber)
-                .discountLevels(discountLevels)
+        Discount discount = Discount.builder(salesOrg, salesOffice, materialNumber, 1817.0, discountLevels)
                 .build();
 
-        when(discountService.findAllDiscountBySalesOrgAndSalesOfficeAndMaterialNumberIn("100", "129", Collections.singletonList(materialNumber))).thenReturn(Collections.singletonList(discount));
+        when(discountService.findAllDiscountBySalesOrgAndSalesOfficeAndMaterialNumberIn(salesOrg, salesOffice,
+                Collections.singletonList(materialNumber))).thenReturn(Collections.singletonList(discount));
 
-        List<PriceRow> actual = service.saveAll(List.of(priceRow), "100", "129", "1",
+        when(repository.save(any())).thenAnswer(invocation -> invocation.getArguments()[0]);
+
+        List<PriceRow> actual = service.saveAll(List.of(priceRow), salesOrg, salesOffice, "1",
                 Map.of(materialPrice.getMaterialNumber(), materialPrice));
 
         PriceRow actualPriceRow = actual.get(0);
@@ -293,35 +276,28 @@ public class PriceRowServiceImplUnitTest {
         when(materialPriceService.findByMaterialNumber(anyString())).thenReturn(materialPrice);
 
         List<DiscountLevel> discountLevels = List.of(
-                DiscountLevel.builder()
-                        .level(1)
-                        .discount(0.0)
+                DiscountLevel.builder(0.0, 1)
                         .build(),
-                DiscountLevel.builder()
-                        .level(2)
-                        .discount(90.0)
+                DiscountLevel.builder(90.0, 2)
                         .build(),
-                DiscountLevel.builder()
-                        .level(3)
-                        .discount(180.0)
+                DiscountLevel.builder(180.0, 3)
                         .build(),
-                DiscountLevel.builder()
-                        .level(4)
-                        .discount(315.0)
+                DiscountLevel.builder(315.0, 4)
                         .build(),
-                DiscountLevel.builder()
-                        .level(5)
-                        .discount(468.0)
+                DiscountLevel.builder(468.0, 5)
                         .build()
         );
-        Discount discount = Discount.builder()
-                .materialNumber(materialNumber)
-                .discountLevels(discountLevels)
+
+        String salesOrg = "100";
+        String salesOffice = "129";
+        Discount discount = Discount.builder(salesOrg, salesOffice, materialNumber, standardPrice, discountLevels)
                 .build();
 
-        when(discountService.findAllDiscountBySalesOrgAndSalesOfficeAndMaterialNumberIn("100", "129", Collections.singletonList(materialNumber))).thenReturn(Collections.singletonList(discount));
+        when(discountService.findAllDiscountBySalesOrgAndSalesOfficeAndMaterialNumberIn(salesOrg, salesOffice, Collections.singletonList(materialNumber))).thenReturn(Collections.singletonList(discount));
 
-        List<PriceRow> actual = service.saveAll(List.of(priceRow), "100", "129", "1",
+        when(repository.save(any())).thenAnswer(invocation -> invocation.getArguments()[0]);
+
+        List<PriceRow> actual = service.saveAll(List.of(priceRow), salesOrg, salesOffice, "1",
                 Map.of(materialPrice.getMaterialNumber(), materialPrice));
 
         assertThat(actual.get(0).getDiscountLevel(), is(1));
@@ -368,35 +344,29 @@ public class PriceRowServiceImplUnitTest {
         when(materialPriceService.findByMaterialNumber(anyString())).thenReturn(materialPrice);
 
         List<DiscountLevel> discountLevels = List.of(
-                DiscountLevel.builder()
-                        .level(1)
-                        .discount(0.0)
+                DiscountLevel.builder(0.0, 1)
                         .build(),
-                DiscountLevel.builder()
-                        .level(2)
-                        .discount(90.0)
+                DiscountLevel.builder(90.0, 2)
                         .build(),
-                DiscountLevel.builder()
-                        .level(3)
-                        .discount(180.0)
+                DiscountLevel.builder(180.0, 3)
                         .build(),
-                DiscountLevel.builder()
-                        .level(4)
-                        .discount(315.0)
+                DiscountLevel.builder(315.0, 4)
                         .build(),
-                DiscountLevel.builder()
-                        .level(5)
-                        .discount(468.0)
+                DiscountLevel.builder(468.0, 5)
                         .build()
         );
-        Discount discount = Discount.builder()
-                .materialNumber(materialNumber)
-                .discountLevels(discountLevels)
+
+        String salesOrg = "100";
+        String salesOffice = "129";
+        Discount discount = Discount.builder(salesOrg, salesOffice, materialNumber, standardPrice, discountLevels)
                 .build();
 
-        when(discountService.findAllDiscountBySalesOrgAndSalesOfficeAndMaterialNumberIn("100", "129", Collections.singletonList(materialNumber))).thenReturn(Collections.singletonList(discount));
 
-        List<PriceRow> actual = service.saveAll(List.of(priceRow), "100", "129", "1",
+        when(discountService.findAllDiscountBySalesOrgAndSalesOfficeAndMaterialNumberIn(salesOrg, salesOffice, Collections.singletonList(materialNumber))).thenReturn(Collections.singletonList(discount));
+
+        when(repository.save(any())).thenAnswer(invocation -> invocation.getArguments()[0]);
+
+        List<PriceRow> actual = service.saveAll(List.of(priceRow), salesOrg, salesOffice, "1",
                 Map.of(materialPrice.getMaterialNumber(), materialPrice));
 
         assertThat(actual.get(0).getDiscountLevel(), is(2));
@@ -443,37 +413,29 @@ public class PriceRowServiceImplUnitTest {
         when(materialPriceService.findByMaterialNumber(anyString())).thenReturn(materialPrice);
 
         List<DiscountLevel> discountLevels = List.of(
-                DiscountLevel.builder()
-                        .level(1)
-                        .discount(0.0)
+                DiscountLevel.builder(0.0, 1)
                         .build(),
-                DiscountLevel.builder()
-                        .level(2)
-                        .discount(90.0)
+                DiscountLevel.builder(90.0, 2)
                         .build(),
-                DiscountLevel.builder()
-                        .level(3)
-                        .discount(180.0)
+                DiscountLevel.builder(180.0, 3)
                         .build(),
-                DiscountLevel.builder()
-                        .level(4)
-                        .discount(315.0)
+                DiscountLevel.builder(315.0, 4)
                         .build(),
-                DiscountLevel.builder()
-                        .level(5)
-                        .discount(468.0)
+                DiscountLevel.builder(468.0, 5)
                         .build()
         );
-        Discount discount = Discount.builder()
-                .materialNumber(materialNumber)
-                .discountLevels(discountLevels)
+        String salesOrg = "100";
+        String salesOffice = "129";
+        Discount discount = Discount.builder(salesOrg, salesOffice, materialNumber, standardPrice, discountLevels)
                 .build();
 
         List<String> materials = new ArrayList<>();
         materials.add(materialNumber);
-        when(discountService.findAllDiscountBySalesOrgAndSalesOfficeAndMaterialNumberIn("100", "129", materials)).thenReturn(Collections.singletonList(discount));
 
-        List<PriceRow> actual = service.saveAll(List.of(priceRow), "100", "129", "1",
+        when(discountService.findAllDiscountBySalesOrgAndSalesOfficeAndMaterialNumberIn(salesOrg, salesOffice, materials)).thenReturn(Collections.singletonList(discount));
+        when(repository.save(any())).thenAnswer(invocation -> invocation.getArguments()[0]);
+
+        List<PriceRow> actual = service.saveAll(List.of(priceRow), salesOrg, salesOffice, "1",
                 Map.of(materialPrice.getMaterialNumber(), materialPrice));
 
         assertThat(actual.get(0).getDiscountLevel(), is(6));
